--- a/maui-to-do/MainPage.xaml
+++ b/maui-to-do/MainPage.xaml
@@ -2,37 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:maui_to_do.Models"
-             x:Class="maui_to_do.MainPage">
+             xmlns:viewmodels="clr-namespace:maui_to_do.ViewModels"
+             x:Class="maui_to_do.MainPage"
+             x:DataType="viewmodels:MainViewModel">
+    <Grid RowDefinitions="auto,*">
+        <Button Text="Load Data" Command="{Binding GetActionItemsCommand}" />
+        <CollectionView ItemsSource="{Binding Items}" Grid.Row="1">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="models:ActionItem">
+                    <HorizontalStackLayout Padding="10">
+                        <CheckBox IsChecked="{Binding IsCompleted}" />
+                        <Label VerticalOptions="Center" Text="{Binding Title}" />
+                    </HorizontalStackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </Grid>
 
-    <CollectionView>
-        <CollectionView.ItemsSource>
-            <x:Array Type="{x:Type models:ActionItem}">
-                <models:ActionItem 
-                    ID="0"
-                    Title="Install .NET MAUI"
-                    IsCompleted="True"/>
-                <models:ActionItem 
-                    ID="1"
-                    Title="Start a Demo App"
-                    IsCompleted="True"/>
-                <models:ActionItem 
-                    ID="2"
-                    Title="Make To-Do app"
-                    IsCompleted="False"/>
-                <models:ActionItem 
-                    ID="3"
-                    Title="Get To-Do working on Android, iOS, and Mac"
-                    IsCompleted="False"/>
-            </x:Array>
-        </CollectionView.ItemsSource>
-        <CollectionView.ItemTemplate>
-            <DataTemplate x:DataType="models:ActionItem">
-                <HorizontalStackLayout Padding="10">
-                    <CheckBox IsChecked="{Binding IsCompleted}" />
-                    <Label VerticalOptions="Center" Text="{Binding Title}" />
-                </HorizontalStackLayout>
-            </DataTemplate>
-        </CollectionView.ItemTemplate>
-    </CollectionView>
- 
 </ContentPage>
